plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3' apply false
    id 'io.spring.dependency-management' version '1.0.15.RELEASE' apply false
}

group = 'com.bicky'
version = '1.0-SNAPSHOT'

allprojects {
    repositories {
        mavenLocal()
        mavenCentral()
        maven { url "https://repo.spring.io/milestone" }
        maven { url "https://repo.spring.io/snapshot" }
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.springframework.boot'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.2"
        }
    }

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url "https://repo.spring.io/milestone" }
        maven { url "https://repo.spring.io/snapshot" }
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.keycloak:keycloak-spring-boot-starter:20.0.2'
        implementation 'org.keycloak:keycloak-admin-client:20.0.1'
        implementation 'org.springframework.security:spring-security-oauth2-client'
        implementation 'org.springframework.security:spring-security-oauth2-resource-server'
        implementation 'org.springframework.security:spring-security-oauth2-jose'
        implementation 'org.apache.camel.springboot:camel-spring-boot-starter:4.0.2'
        implementation 'com.bicky:fast-payment-contracts:1.0.0'
        implementation 'com.google.protobuf:protobuf-java:3.19.1'
        implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
        implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.14.1'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        // Common Lombok dependencies for all subprojects
        compileOnly 'org.projectlombok:lombok:1.18.26'  // Or the latest version
        annotationProcessor 'org.projectlombok:lombok:1.18.26'
    }
}